--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="logoass.jpg" alt="Logo">
+        <img src="logoass.jpeg" alt="Logo">
         <h2>User Login</h2>
         <form action="/login" method="POST">
             <input type="text" name="username" placeholder="Username" required>
